# mypyc-bug-repro

./: .gitignore  README.md  hatch.toml  pyproject.toml
src/repro/: __about__.py  __init__.py
